--- a/configuration.yml
+++ b/configuration.yml
@@ -1,158 +1,29 @@
-jenkins:
-  agentProtocols:
-    - "JNLP4-connect"
-    - "Ping"
-  authorizationStrategy:
-    loggedInUsersCanDoAnything:
-      allowAnonymousRead: false
-  crumbIssuer:
-    standard:
-      excludeClientIPFromCrumb: false
-  disableRememberMe: false
-  labelAtoms:
-    - name: "built-in"
-  markupFormatter: "plainText"
-  mode: NORMAL
-  myViewsTabBar: "standard"
-  nodeProperties:
-    - envVars:
-        env:
-          - key: "MAVEN_OPTS"
-  numExecutors: 2
-  primaryView:
-    all:
-      name: "all"
-  projectNamingStrategy: "standard"
-  quietPeriod: 5
-  remotingSecurity:
-    enabled: true
-  scmCheckoutRetryCount: 0
-  securityRealm:
-    local:
-      allowsSignup: false
-      enableCaptcha: false
-      users:
-        - id: "badreddine"
-          name: "badreddine qassemi"
-          properties:
-            - "myView"
-            - preferredProvider:
-                providerId: "default"
-            - "timezone"
-            - mailer:
-                emailAddress: "badreddineqassimi@gmail.com"
-            - "apiToken"
-        - id: "jigglypuff"
-          name: "jigglypuff"
-          properties:
-            - "apiToken"
-            - "myView"
-            - preferredProvider:
-                providerId: "default"
-            - "timezone"
-            - mailer:
-                emailAddress: "yes@gmail.com"
-  slaveAgentPort: -1
-  updateCenter:
-    sites:
-      - id: "default"
-        url: "https://updates.jenkins.io/update-center.json"
-  views:
-    - all:
-        name: "all"
-  viewsTabBar: "standard"
-globalCredentialsConfiguration:
-  configuration:
-    providerFilter: "none"
-    typeFilter: "none"
-security:
-  apiToken:
-    creationOfLegacyTokenEnabled: false
-    tokenGenerationOnCreationEnabled: false
-    usageStatisticsEnabled: true
-  gitHooks:
-    allowedOnAgents: false
-    allowedOnController: false
-  gitHostKeyVerificationConfiguration:
-    sshHostKeyVerificationStrategy: "knownHostsFileVerificationStrategy"
-  globalJobDslSecurityConfiguration:
-    useScriptSecurity: true
-  sSHD:
-    port: -1
-unclassified:
-  buildDiscarders:
-    configuredBuildDiscarders:
-      - "jobBuildDiscarder"
-  buildStepOperation:
-    enabled: false
-  email-ext:
-    adminRequiredForTemplateTesting: false
-    allowUnregisteredEnabled: false
-    charset: "UTF-8"
-    debugMode: false
-    defaultBody: |-
-      $PROJECT_NAME - Build # $BUILD_NUMBER - $BUILD_STATUS:
+enkins:
+  systemMessage: "Welcome to Jenkins!"
 
-      Check console output at $BUILD_URL to view the results.
-    defaultSubject: "$PROJECT_NAME - Build # $BUILD_NUMBER - $BUILD_STATUS!"
-    defaultTriggerIds:
-      - "hudson.plugins.emailext.plugins.trigger.FailureTrigger"
-    maxAttachmentSize: -1
-    maxAttachmentSizeMb: -1
-    precedenceBulk: false
-    watchingEnabled: false
-  enrichedSummaryConfig:
-    enrichedSummaryEnabled: false
-    httpClientDelayBetweenRetriesInSeconds: 1
-    httpClientMaxRetries: 3
-    httpClientTimeoutInSeconds: 1
-  fingerprints:
-    fingerprintCleanupDisabled: false
-    storage: "file"
-  gitHubConfiguration:
-    apiRateLimitChecker: ThrottleForNormalize
-  gitHubPluginConfig:
-    hookUrl: "http://localhost:8080/github-webhook/"
-  globalTimeOutConfiguration:
-    operations:
-      - "abortOperation"
-    overwriteable: false
-  injectionConfig:
-    allowUntrusted: false
-    enabled: false
-    injectCcudExtension: false
-    injectMavenExtension: false
-  junitTestResultStorage:
-    storage: "file"
-  location:
-    adminAddress: "address not configured yet <nobody@nowhere>"
-    url: "http://localhost:8080/"
-  mailer:
-    charset: "UTF-8"
-    useSsl: false
-    useTls: false
-  pollSCM:
-    pollingThreadCount: 10
-  scmGit:
-    addGitTagAction: false
-    allowSecondFetch: false
-    createAccountBasedOnEmail: false
-    disableGitToolChooser: false
-    hideCredentials: false
-    showEntireCommitSummaryInChanges: false
-    useExistingAccountWithSameEmail: false
-  timestamper:
-    allPipelines: false
-    elapsedTimeFormat: "'<b>'HH:mm:ss.S'</b> '"
-    systemTimeFormat: "'<b>'HH:mm:ss'</b> '"
-tool:
-  git:
-    installations:
-      - home: "git"
-        name: "Default"
-  mavenGlobalConfig:
-    globalSettingsProvider: "standard"
-    settingsProvider: "standard"
+securityRealm:
+  local:
+    allowsSignup: false
+    users:
+      - id: "badreddine"
+        name: "badreddine"
+        password: "Pedro01%%"
+
+authorizationStrategy:
+  loggedInUsersCanDoAnything:
+    allowAnonymousRead: false
+
+# Change this URL to match your Jenkins URL
+jenkinsUrl: "http://localhost:8080/"
+
+# Change this to match the email address for the Jenkins administrator
+jenkinsAdminEmail: "badreddineqassimi@gmail.com"
+
+# Change this to match the plugins you want to install
+plugins:
+  - Configuration as Code
+  - Job DSL
+
   jobs:
     - script: |
         steps {
