--- a/my_marvin.yml
+++ b/my_marvin.yml
@@ -70,17 +70,18 @@ jenkins:
 
 jenkinsUrl: "http://localhost:8080/"
 
-plugins:
-  - configuration-as-code
-  - job-dsl
-  - cloudbees-folder
-  - credentials
-  - github
-  - instance-identity
-  - script-security
-  - structs
-  - role-strategy
-  - ws-cleanup
+unclassified:
+  plugins:
+    - configuration-as-code
+    - job-dsl
+    - cloudbees-folder
+    - credentials
+    - github
+    - instance-identity
+    - script-security
+    - structs
+    - role-strategy
+    - ws-cleanup
 
 jobs:
   - script: >
