--- a/my_marvin.yml
+++ b/my_marvin.yml
@@ -82,51 +82,52 @@ unclassified:
     - structs
     - role-strategy
     - ws-cleanup
-
-jobs:
-  - script: >
-      folder('/Tools') {
+  jobs:
+    - script: >
+        folder('Tools') {
           description('Folder for miscellaneous tools.')
           displayName('Tools')
-      }
-
-      freeStyleJob('/Tools/clone-repository') {
-          wrappers {
+          // add jobs inside the folder
+          freeStyleJob('clone-repository') {
+            displayName('Clone Repository')
+            wrappers {
               preBuildCleanup {
-                  preBuildCleanup()
+                preBuildCleanup()
               }
-          }
-          parameters {
+            }
+            parameters {
               stringParam("GIT_REPOSITORY_URL", "", "Git URL of the repository to clone")
-          }
-          steps {
+            }
+            steps {
               shell("git clone \$GIT_REPOSITORY_URL")
+            }
           }
-      }
 
-      freeStyleJob('/Tools/SEED') {
-          parameters {
+          freeStyleJob('SEED') {
+            displayName('Seed')
+            parameters {
               stringParam("GITHUB_NAME", "", "GitHub repository owner/repo_name (e.g.: \"EpitechIT31000/chocolatine\")")
               stringParam("DISPLAY_NAME", "", "Display name for the job")
-          }
-          scm {
+            }
+            scm {
               github('\$GITHUB_NAME')
-          }
-          steps {
+            }
+            steps {
               dsl {
-                  text('''job ("\$DISPLAY_NAME") {
-                      wrappers {
-                          preBuildCleanup {
-                              preBuildCleanup()
-                          }
-                      }
-                      steps {
-                          shell("make fclean")
-                          shell("make")
-                          shell("make test")
-                          shell("make clean")
-                      }
-                  }'''.stripIndent())
+                text('''job ("\$DISPLAY_NAME") {
+                  wrappers {
+                    preBuildCleanup {
+                      preBuildCleanup()
+                    }
+                  }
+                  steps {
+                    shell("make fclean")
+                    shell("make")
+                    shell("make test")
+                    shell("make clean")
+                  }
+                }'''.stripIndent())
               }
+            }
           }
-      }
+        }
