--- a/my_marvin.yml
+++ b/my_marvin.yml
@@ -84,51 +84,60 @@ jenkins:
               - "nasso"
 
 jobs:
-    - script: >
-        folder('Tools') {
+  - script: >
+      folder('/Tools') {
           description('Folder for miscellaneous tools.')
           displayName('Tools')
-          // add jobs inside the folder
-          freeStyleJob('clone-repository') {
-            displayName('Clone Repository')
-            wrappers {
-              preBuildCleanup {
-                preBuildCleanup()
-              }
-            }
-            parameters {
-              stringParam("GIT_REPOSITORY_URL", "", "Git URL of the repository to clone")
-            }
-            steps {
-              shell("git clone \$GIT_REPOSITORY_URL")
-            }
-          }
+      }
 
-          freeStyleJob('SEED') {
-            displayName('Seed')
-            parameters {
+      freeStyleJob('/Tools/clone-repository') {
+          wrappers {
+              preBuildCleanup {
+                  preBuildCleanup()
+              }
+          }
+          parameters {
+              stringParam("GIT_REPOSITORY_URL", "", "Git URL of the repository to clone")
+          }
+          steps {
+              shell("git clone \$GIT_REPOSITORY_URL")
+          }
+      }
+
+      freeStyleJob('/Tools/SEED') {
+          parameters {
               stringParam("GITHUB_NAME", "", "GitHub repository owner/repo_name (e.g.: \"EpitechIT31000/chocolatine\")")
               stringParam("DISPLAY_NAME", "", "Display name for the job")
-            }
-            scm {
-              github('\$GITHUB_NAME')
-            }
-            steps {
-              dsl {
-                text('''job ("\$DISPLAY_NAME") {
-                  wrappers {
-                    preBuildCleanup {
-                      preBuildCleanup()
-                    }
-                  }
-                  steps {
-                    shell("make fclean")
-                    shell("make")
-                    shell("make test")
-                    shell("make clean")
-                  }
-                }'''.stripIndent())
+          }
+          scm {
+              git {
+                remote {
+                  url("https://github.com/${GITHUB_NAME}.git")
+                  credentials('github-creds') // Credentials ID for GitHub authentication
+                }
+                branch('*/master')
+                cleanBeforeCheckout(true)
               }
             }
-          }
-        }
+
+            steps {
+              shell('make fclean')
+              shell('make')
+              shell('make tests_run')
+              shell('make clean')
+            }
+
+            triggers {
+              scm('* * * * *')
+            }
+
+            wrappers {
+              preBuildCleanup()
+            }
+
+            publishers {
+              githubNotifier {
+                results(success: true, unstable: true, failure: true)
+              }
+            }
+      }
