--- a/my_marvin.yml
+++ b/my_marvin.yml
@@ -85,44 +85,50 @@ jenkins:
 
 jobs:
   - script: >
-      folder('/Tools') {
+      folder('Tools') {
         description('Folder for miscellaneous tools.')
         displayName('Tools')
-      }
-
-      freeStyleJob('/Tools/clone-repository') {
-        wrappers {
-          preBuildCleanup()
-        }
-        parameters {
-          stringParam('GIT_REPOSITORY_URL', '', 'Git URL of the repository to clone')
-        }
-        steps {
-          shell("git clone \$GIT_REPOSITORY_URL")
-        }
-      }
-
-      freeStyleJob('/Tools/SEED') {
-        description('SEED job for creating other jobs')
-        parameters {
-          stringParam('GITHUB_NAME', '', 'GitHub repository owner/repo_name (e.g.: "EpitechIT31000/chocolatine")')
-          stringParam('DISPLAY_NAME', '', 'Display name for the job')
-        }
-        scm {
-          git {
-            remote {
-              url("https://github.com/\${GITHUB_NAME}.git")
+        // add jobs inside the folder
+        freeStyleJob('clone-repository') {
+          displayName('Clone Repository')
+          wrappers {
+            preBuildCleanup {
+              preBuildCleanup()
             }
-            branch('*/master')
+          }
+          parameters {
+            stringParam("GIT_REPOSITORY_URL", "", "Git URL of the repository to clone")
+          }
+          steps {
+            shell("git clone \$GIT_REPOSITORY_URL")
           }
         }
-        steps {
-          shell('make fclean')
-          shell('make')
-          shell('make tests_run')
-          shell('make clean')
-        }
-        triggers {
-          cron('* * * * *')
+
+        freeStyleJob('SEED') {
+          displayName('Seed')
+          parameters {
+            stringParam("GITHUB_NAME", "", "GitHub repository owner/repo_name (e.g.: \"EpitechIT31000/chocolatine\")")
+            stringParam("DISPLAY_NAME", "", "Display name for the job")
+          }
+          scm {
+            github('\$GITHUB_NAME')
+          }
+          steps {
+            dsl {
+              text('''job ("\$DISPLAY_NAME") {
+                wrappers {
+                  preBuildCleanup {
+                    preBuildCleanup()
+                  }
+                }
+                steps {
+                  shell("make fclean")
+                  shell("make")
+                  shell("make test")
+                  shell("make clean")
+                }
+              }'''.stripIndent())
+            }
+          }
         }
       }
