--- a/my_marvin.yml
+++ b/my_marvin.yml
@@ -86,49 +86,49 @@ jenkins:
 jobs:
   - script: >
       folder('Tools') {
-        description('Folder for miscellaneous tools.')
         displayName('Tools')
-        // add jobs inside the folder
-        freeStyleJob('clone-repository') {
-          displayName('Clone Repository')
-          wrappers {
-            preBuildCleanup {
-              preBuildCleanup()
-            }
-          }
-          parameters {
-            stringParam("GIT_REPOSITORY_URL", "", "Git URL of the repository to clone")
-          }
-          steps {
-            shell("git clone \$GIT_REPOSITORY_URL")
-          }
+        description('Folder for miscellaneous tools.')
+      }
+      freeStyleJob('Tools/clone-repository') {
+        parameters {
+          stringParam('GIT_REPOSITORY_URL', '', 'Git URL of the repository to clone')
         }
-
-        freeStyleJob('SEED') {
-          displayName('Seed')
-          parameters {
-            stringParam("GITHUB_NAME", "", "GitHub repository owner/repo_name (e.g.: \"EpitechIT31000/chocolatine\")")
-            stringParam("DISPLAY_NAME", "", "Display name for the job")
-          }
-          scm {
-            github('\$GITHUB_NAME')
-          }
-          steps {
-            dsl {
-              text('''job ("\$DISPLAY_NAME") {
-                wrappers {
-                  preBuildCleanup {
-                    preBuildCleanup()
+        steps {
+          shell('git clone ${GIT_REPOSITORY_URL}')
+        }
+        wrappers {
+          preBuildCleanup()
+        }
+      }
+      freeStyleJob('Tools/SEED') {
+        parameters {
+          stringParam('GITHUB_NAME', '', 'GitHub repository owner/repo_name (e.g.: "EpitechIT31000/chocolatine")')
+          stringParam('DISPLAY_NAME', '', 'Display name for the job')
+        }
+        steps {
+          dsl {
+            text('''freeStyleJob(DISPLAY_NAME) {
+              triggers {
+                scm('@minutes')
+              }
+              scm {
+                git {
+                  remote {
+                    github(GITHUB_NAME)
                   }
+                  branches('master')
                 }
-                steps {
-                  shell("make fclean")
-                  shell("make")
-                  shell("make test")
-                  shell("make clean")
-                }
-              }'''.stripIndent())
-            }
+              }
+              wrappers {
+                preBuildCleanup()
+              }
+              steps {
+                shell('make fclean')
+                shell('make')
+                shell('make test')
+                shell('make clean')
+              }
+            }''')
           }
         }
       }
