--- a/my_marvin.yml
+++ b/my_marvin.yml
@@ -85,52 +85,61 @@ jenkins:
 
 jobs:
   - script: >
-      folder('Tools') {
-        displayName('Tools')
-        description('Folder for miscellaneous tools.')
+      folder('/Tools') {
+          description('Folder for miscellaneous tools.')
+          displayName('Tools')
       }
-      freeStyleJob('Tools/clone-repository') {
-        parameters {
-          stringParam('GIT_REPOSITORY_URL', '', 'Git URL of the repository to clone')
-        }
-        steps {
-          shell('git clone ${GIT_REPOSITORY_URL}')
-        }
-        wrappers {
-          preBuildCleanup()
-        }
-      }
-      freeStyleJob('Tools/SEED') {
-        parameters {
-          stringParam('GITHUB_NAME', '', 'GitHub repository owner/repo_name (e.g.: "EpitechIT31000/chocolatine")')
-          stringParam('DISPLAY_NAME', '', 'Display name for the job')
-        }
-        steps {
-          dsl {
-            text('''freeStyleJob(DISPLAY_NAME) {
-              triggers {
-                scm("H/1***")
-                scm("*****")
+
+      freeStyleJob('/Tools/clone-repository') {
+          wrappers {
+              preBuildCleanup {
+                  preBuildCleanup()
               }
-              scm {
-                git {
-                  remote {
-                    github(GITHUB_NAME)
-                  }
-                  branches('master')
-                  branches('main')
-                }
-              }
-              wrappers {
-                preBuildCleanup()
-              }
-              steps {
-                shell('make fclean')
-                shell('make')
-                shell('make test')
-                shell('make clean')
-              }
-            }''')
           }
-        }
+          parameters {
+              stringParam("GIT_REPOSITORY_URL", "", "Git URL of the repository to clone")
+          }
+          steps {
+              shell("git clone \$GIT_REPOSITORY_URL")
+          }
+      }
+
+      freeStyleJob('/Tools/SEED') {
+          parameters {
+              stringParam("GITHUB_NAME", "", "GitHub repository owner/repo_name (e.g.: \"EpitechIT31000/chocolatine\")")
+              stringParam("DISPLAY_NAME", "", "Display name for the job")
+          }
+          scm {
+              github('\$GITHUB_NAME')
+          }
+          steps {
+              dsl {
+                  text('''job ("\$DISPLAY_NAME") {
+                      wrappers {
+                          preBuildCleanup {
+                              preBuildCleanup()
+                          }
+                      }
+                      triggers {
+                          scm("H/1***")
+                          scm("*****")
+                      }
+                      scm {
+                          git {
+                              remote {
+                                  github("$GITHUB_NAME")
+                              }
+                                  branches("master")
+                                  branches("main")
+                              }
+                          }
+                      steps {
+                          shell("make fclean")
+                          shell("make")
+                          shell("make test")
+                          shell("make clean")
+                      }
+                  }'''.stripIndent())
+              }
+          }
       }
